:globe_with_meridians: build cards kanban

--- a/client/src/components/Card/card.css
+++ b/client/src/components/Card/card.css
@@ -26,3 +26,24 @@ gap: 10px;
 .card:hover .card_top svg{
     opacity: 1;
 }
+
+.card_title{
+    font-weight: bold;
+}
+
+.card_footer{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card_footer p{
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.card_footer svg{
+    height: 14px;
+    width: 14px;
+}
