--- a/client/src/App.css
+++ b/client/src/App.css
@@ -184,11 +184,28 @@ dd {
   flex: 1;
   width: 100%;
   overflow-x: auto;
-  padding: 20px;
+  
 }
 
 .kanban_boards{
+  height: 100%;
+  padding: 20px;
+  padding-bottom: 0px;
   min-width: fit-content;
   display: flex;
   gap: 30px;
+}
+
+.custom_scroll::-webkit-scrollbar{
+  width: 8px;
+}
+
+.custom_scroll::-webkit-scrollbar-thumb{
+	border-radius: 30px;
+	border: 1px solid #ccc;
+	background-color: #fff;
+}
+
+.custom_scroll::-webkit-scrollbar-thumb:hover{
+	background-color: #ccc;
 }
