--- a/client/src/components/Boards/board.css
+++ b/client/src/components/Boards/board.css
@@ -1,6 +1,7 @@
 .board{
     min-width: 290px;
     max-height: 100%;
+    height: 100%;
     display: flex;
     flex-direction: column;
     gap: 20px;
@@ -22,10 +23,23 @@
 }
 
 .board_cards{
+    flex: 1;
+    height: 100%;
     background-color: #f8f8f8;
     display: flex;
     flex-direction: column;
     gap: 10px;
     padding: 10px;
     border-bottom: 10px;
+    overflow-y: auto;
+}
+
+.board_cards_add{
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 1px 2px 0px 1px rbga(0,0,0,0.15);
+}
+
+.board_cards_add:hover{
+    box-shadow: #ccc;
 }
