--- a/client/src/components/Editable/editable.css
+++ b/client/src/components/Editable/editable.css
@@ -3,7 +3,7 @@
 }
 
 .editable_display{
-    background-color: #f8f8f8;
+    background-color: #fff;
     border-radius: 3px;
     padding: 10px;
     text-align: center;
