--- a/client/src/App.css
+++ b/client/src/App.css
@@ -196,6 +196,22 @@ dd {
   gap: 30px;
 }
 
+.kanban_boards_board{
+	min-width: 290px;
+	width: 290px;
+
+}
+
+.kanban_boards_board_add{
+	background-color: #fff ;
+    border-radius: 5px;
+    box-shadow: 1px 2px 0 1px rgba(0,0,0,0.15);
+}
+
+.kanban_boards_board_add:hover{
+    box-shadow: 1px 2px 0 1px #ccc ;
+}
+
 .custom_scroll::-webkit-scrollbar{
   width: 8px;
 }
