--- a/client/src/App.css
+++ b/client/src/App.css
@@ -120,8 +120,8 @@ p {
 	/* margin-left: auto;
 	margin-right: auto;
 	text-align: center; */
-  font-size: 16px;
-  line-height: 28px;
+	font-size: 16px;
+	line-height: 28px;
 }
 
 div {
@@ -169,43 +169,81 @@ dd {
 	margin-left: 5px;
 }
 
-.kanban_navbar{
-  width: 100%;
-  padding: 20 px 30px;
-  border-bottom: 1px solid #ccc;
+.kanban_navbar {
+	width: 100%;
+	padding: 20 px 30px;
+	border-bottom: 1px solid #ccc;
 }
-.kanban{
-  height: 100vh;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
+.kanban {
+	height: 100vh;
+	width: 100%;
+	display: flex;
+	flex-direction: column;
 }
-.kanban_outer{
-  flex: 1;
-  width: 100%;
-  overflow-x: auto;
-  
-}
-
-.kanban_boards{
-  height: 100%;
-  padding: 20px;
-  padding-bottom: 0px;
-  min-width: fit-content;
-  display: flex;
-  gap: 30px;
+.kanban_outer {
+	flex: 1;
+	width: 100%;
+	overflow-x: auto;
 }
 
-.custom_scroll::-webkit-scrollbar{
-  width: 8px;
+.kanban_boards {
+	height: 100%;
+	padding: 20px;
+	padding-bottom: 0px;
+	min-width: fit-content;
+	display: flex;
+	gap: 30px;
 }
 
-.custom_scroll::-webkit-scrollbar-thumb{
+.custom_scroll::-webkit-scrollbar {
+	width: 8px;
+}
+
+.custom_scroll::-webkit-scrollbar-thumb {
 	border-radius: 30px;
 	border: 1px solid #ccc;
 	background-color: #fff;
 }
 
-.custom_scroll::-webkit-scrollbar-thumb:hover{
+.custom_scroll::-webkit-scrollbar-thumb:hover {
 	background-color: #ccc;
+}
+
+.navigation {
+	background: #282c34;
+}
+
+.navigation ul {
+	list-style-type: none;
+	margin: 0;
+	padding: 0;
+}
+
+.navigation a:link,
+.navigation a:visited {
+	color: white;
+	text-decoration: none;
+}
+
+.active {
+	font-weight: bold;
+	color: red !important;
+}
+
+.error {
+	font-weight: bold;
+	color: red !important;
+}
+
+.forgotPassword {
+	background: none !important;
+	border: none !important;
+	text-decoration: underline;
+	margin-left: 5px;
+	color: #069;
+}
+
+.forgotPassword:hover {
+	text-decoration: none;
+	color: red;
 }
