--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,41 +1,7 @@
-/* .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
 .App-link {
-  color: #61dafb;
+	color: #61dafb;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-} */
 .App {
 	text-align: center;
 }
@@ -129,7 +95,8 @@ div {
 }
 
 a {
-	color: #1e8678;
+	margin-right: 7px;
+	color: black;
 	text-decoration: none !important;
 }
 
@@ -194,42 +161,25 @@ dd {
 	display: flex;
 	gap: 30px;
 }
-
-.kanban_boards_board{
-	min-width: 290px;
-	width: 290px;
-
+.nav-pills .nav-link {
+	background-color: whitesmoke;
+	border-radius: 2.5rem;
+	margin-right: 7px;
 }
 
-.kanban_boards_board_add{
-	background-color: #fff ;
-    border-radius: 5px;
-    box-shadow: 1px 2px 0 1px rgba(0,0,0,0.15);
-}
-
-.kanban_boards_board_add:hover{
-    box-shadow: 1px 2px 0 1px #ccc ;
-}
-
-.custom_scroll::-webkit-scrollbar{
-  width: 8px;
-}
-
-.custom_scroll::-webkit-scrollbar-thumb {
-	border-radius: 30px;
-	border: 1px solid #ccc;
-	background-color: #fff;
-}
-
-.custom_scroll::-webkit-scrollbar-thumb:hover {
-	background-color: #ccc;
+.nav-link:hover {
+	background-color: transparent;
+	color: white;
+	border: 2px solid white;
 }
 
 .navigation {
 	background: #282c34;
+	display: inline;
 }
 
 .navigation ul {
+	display: inline;
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
