--- a/client/src/App.css
+++ b/client/src/App.css
@@ -220,3 +220,48 @@ dd {
 	height: 300px;
 	display: inline-grid;
 }
+.drag-n-drop{
+	padding: .5rem;
+	gap: .5rem;
+	display: grid;
+	width: 100%;
+	height: 100%;
+	grid-template-columns: repeat(auto-fill,300px);
+	align-items: start;
+}
+
+.dnd-group{
+	background-color: #79808f;
+	border-radius: 5px;
+	padding: .5rem;
+}
+
+.dnd-item{
+	min-height: 150px;
+	background-color: white;
+	color: #282c34;
+	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-weight: bold;
+}
+
+.dnd-item:not(:last-of-type){
+	margin-bottom: .5rem;
+}
+
+.dnd-item *{
+	margin:0;
+	font-size: 1.2rem;
+}
+
+.group-title{
+	text-align: left;
+	margin-bottom: .5rem;
+	font-size: 1.5rem;
+}
+
+/* .current{
+
+} */
