Commented unwanted Files

--- a/client/src/components/Boards/board.css
+++ b/client/src/components/Boards/board.css
@@ -1,4 +1,4 @@
-.board{
+/* .board{
     min-width: 290px;
     max-height: 100%;
     height: 100%;
@@ -59,4 +59,4 @@
 
 .board_dropdown p{
     cursor: pointer;
-}
+} */
