--- a/client/src/components/Chip/chip.css
+++ b/client/src/components/Chip/chip.css
@@ -1,4 +1,4 @@
-.chip{
+/* .chip{
     display: flex;
     gap: 10px;
     align-items: center;
@@ -14,4 +14,4 @@
     height: 16px;
     width: 16px;
     cursor: pointer;
-}
+} */
