--- a/client/src/components/Card/card.css
+++ b/client/src/components/Card/card.css
@@ -1,4 +1,4 @@
-.card{
+/* .card{
     padding: 10px;
     border-radius: 5px;
     background-color: #fff;
@@ -63,4 +63,4 @@ gap: 10px;
 
 .card_dropdown p{
     cursor: pointer;
-}
+} */
